<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/apptheme_edit_text_holo_dark"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        android:textColor="@color/drawer_item_color" > 

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/apptheme_edit_text_holo_dark"
        android:ems="10"
        android:hint="@string/pswrd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/actionbar_background"
        android:text="@string/entry"
        android:textColor="@color/drawer_item_color" />

    <TextView
        android:id="@+id/forgetPassword"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/forgetPassword"
        android:textColor="@color/drawer_item_color"
        android:textSize="12sp" />

    <Button
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@color/registration_button"
        android:text="@string/registration" />

</LinearLayout>