<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_recovery"
        android:textColor="@color/drawer_item_color" />

    <EditText
        android:id="@+id/textRecovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/login" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/actionbar_background"
        android:text="@string/recovery_button"
        android:textColor="@color/drawer_item_color"
        android:onClick="onclick" />

</LinearLayout>
