<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SpinnerAppTheme" />

    <EditText
        android:id="@+id/name_of_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/drawer_item_color"
        android:background="@drawable/apptheme_edit_text_holo_dark"
        android:ems="10"
        android:hint="@string/name_action" >
        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/start_action"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/drawer_item_color"
        android:text="@string/start_action" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/actionStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/apptheme_edit_text_holo_dark"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/drawer_item_color" />

        <Button
            android:id="@+id/choose_date1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:background="@color/actionbar_background"
            android:onClick="onClick"
            android:text="@string/choose_date"
            android:textColor="@color/drawer_item_color" />

    </TableRow>

    <TextView
        android:id="@+id/end_of_action"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/drawer_item_color"
        android:text="@string/end_action" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/actionEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/apptheme_edit_text_holo_dark"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/drawer_item_color" />

        <Button
            android:id="@+id/end_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:background="@color/actionbar_background"
            android:onClick="onClick1"
            android:text="@string/choose_date"
            android:textColor="@color/drawer_item_color" />

    </TableRow>

    <EditText
        android:id="@+id/acAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/drawer_item_color"
        android:background="@drawable/apptheme_edit_text_holo_dark"
        android:ems="10"
        android:hint="@string/adress"
        android:maxLength="15" />

    <EditText
        android:id="@+id/describtion"
        android:layout_width="match_parent"
        android:textColor="@color/drawer_item_color"
        android:background="@drawable/apptheme_edit_text_holo_dark"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/describtion"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLength="60" />

    <Button
        android:id="@+id/continue_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/actionbar_background"
        android:onClick="onClick2"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/continue_action"
        android:textColor="@color/drawer_item_color" />

</LinearLayout>
